this is my color code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>this is imran repository</h1>
+    <h1 style="color: crimson;">this is imran repository</h1>
+    <h2 style="background-color: darkslateblue;">this my non color code</h2>
 </body>
 </html>
